add swagger docs for get requests
