# internal/handler/getHandler.go
@@ -11,6 +11,15 @@ import (
 	"gorm.io/gorm"
 )
 
+// @Summary Get all todos (with filters)
+// @Description Returns a list of all todos (fitting to the filters)
+// @Param done query bool false "Filter by done status"
+// @Param date query string false "Filter by planned date (YYYY-MM-DD)"
+// @Success 200 {array} models.ToDoDTO
+// @Failure 400
+// @Failure 404
+// @Failure 500
+// @Router /todo [get]
 func (h *Handler) GetToDoListByParameters(c *gin.Context) {
 	toDoList := []datatypes.ToDo{}
 
@@ -48,14 +57,11 @@ func (h *Handler) GetToDoListByParameters(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, service.ConvListToToDoDTO(toDoList))
 }
 
-// GetToDoList gibt alle ToDo-Einträge zurück
-// @Summary Alle ToDos abrufen
-// @Description Gibt eine Liste aller ToDos zurück
-// @Tags todos
-// @Produce json
+// @Summary Get all todos
+// @Description Returns a list of all todos
 // @Success 200 {array} models.ToDoDTO
 // @Failure 500
-// @Router /todos [get]
+// @Router /list [get]
 func (h *Handler) GetToDoList(c *gin.Context) {
 	toDoList := []datatypes.ToDo{}
 
@@ -74,6 +80,13 @@ func (h *Handler) GetToDoList(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, service.ConvListToToDoDTO(toDoList))
 }
 
+// @Summary	Get a todo by ID
+// @Description Returns exactly one todo with the given ID
+// @Param id path string true "ID of the todo"
+// @Success 200 {array} models.ToDoDTO
+// @Failure 404
+// @Failure 500
+// @Router /todo/{id} [get]
 func (h *Handler) GetListItemById(c *gin.Context) {
 	id := c.Param("id")
 
